# glfw-base

./: CMakeLists.txt  buildWindows.sh
src/: main.cpp  setup.cpp  setup.hpp
